--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "popper.js": "^1.16.1",
     "vue": "^2.6.12",
     "vue-axios": "^3.2.2",
+    "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
